force-app/main/default/objects/API_Field_Mapping__mdt/API_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Mapping of API JSON nodes (Request/Response) to salesforce fields.</description>
    <label>API Field Mapping</label>
    <pluralLabel>API Field Mappings</pluralLabel>
</CustomObject>