force-app/main/default/objects/API_Field_Mapping__mdt/fields/API_3rd_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>API_3rd_Party_Name__c</fullName>
    <description>Name of API Provider.</description>
    <label>API 3rd Party Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onesource</fullName>
                <default>true</default>
                <label>Onesource</label>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>