force-app/main/default/objects/API_Field_Mapping__mdt/fields/API_Call_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Call_Name__c</fullName>
    <description>API Callout Name.</description>
    <label>API Call Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Tax</fullName>
            </value>
            <value>
                <fullName>Invoice Tax</fullName>
            </value>
            <value>
                <fullName>Post Invoice</fullName>
            </value>
            <value>
                <fullName>Post Credit Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>