force-app/main/default/objects/API_Field_Mapping__mdt/fields/API_Node_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Node_Name__c</fullName>
    <description>Node Name From API.</description>
    <label>API Node Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>