force-app/main/default/objects/API_Field_Mapping__mdt/fields/API_Node_Value__c.field-meta.xml
<CustomField>
    <fullName>API_Node_Value__c</fullName>
    <description>Node Value From API</description>
    <label>API Node Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>