force-app/main/default/objects/API_Field_Mapping__mdt/fields/Custom_Node__c.field-meta.xml
<CustomField>
    <fullName>Custom_Node__c</fullName>
    <description>Custom Node name in Incase of any non Symmetric Data Structure 
e.g. [{[{}]}]</description>
    <label>Custom Node</label>
    <length>100</length>
    <type>Text</type>
</CustomField>