force-app/main/default/objects/API_Field_Mapping__mdt/fields/Do_Not_Use_in_API_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Use_in_API_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do Not Use in API Mapping</description>
    <label>InActive</label>
    <type>Checkbox</type>
</CustomField>