force-app/main/default/objects/API_Field_Mapping__mdt/fields/Do_Not_Use_in_SOQL__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Use_in_SOQL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked &quot;SObject Field Name&quot; will not be used in SOQL query.</description>
    <label>Do Not Use in SOQL</label>
    <type>Checkbox</type>
</CustomField>