force-app/main/default/objects/API_Field_Mapping__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>Field Name of SObject</description>
    <label>Field Name</label>
    <metadataRelationshipControllingField>API_Field_Mapping__mdt.Object_Name__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>API_Field_Mappings</relationshipLabel>
    <relationshipName>API_Field_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>