force-app/main/default/objects/API_Field_Mapping__mdt/fields/isLineMapping__c.field-meta.xml
<CustomField>
    <fullName>isLineMapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To show if mapping is for line item records (Order Item, Invoice Line, Credit Note Line).</description>
    <label>isLineMapping</label>
    <type>Checkbox</type>
</CustomField>