force-app/main/default/objects/API_Field_Mapping__mdt/fields/JSON_Type__c.field-meta.xml
<CustomField>
    <fullName>JSON_Type__c</fullName>
    <description>To show if json is from response or for request body.</description>
    <label>JSON Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request</fullName>
                <default>true</default>
                <label>Request</label>
            </value>
            <value>
                <fullName>Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>