force-app/main/default/objects/API_Field_Mapping__mdt/fields/Object_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Object_Field_Value__c</fullName>
    <description>Value of SObject Field</description>
    <label>Object Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>