force-app/main/default/objects/API_Field_Mapping__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Name of SObject</description>
    <label>Object Name</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>API_Field_Mappings</relationshipLabel>
    <relationshipName>API_Field_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>