force-app/main/default/objects/API_Field_Mapping__mdt/fields/SObject_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Field_Name__c</fullName>
    <description>Name/Developername of SObject&apos;s field</description>
    <label>SObject Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>