force-app/main/default/objects/API_Field_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>JSON_Type__c</columns>
    <columns>API_Call_Name__c</columns>
    <columns>API_3rd_Party_Name__c</columns>
    <columns>API_Node_Name__c</columns>
    <columns>API_Node_Value__c</columns>
    <columns>SObject_Field_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>