force-app/main/default/objects/API_Field_Mapping__mdt/listViews/Tax_Request.listView-meta.xml
<ListView>
    <fullName>Tax_Request</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>API_Call_Name__c</columns>
    <columns>API_Node_Name__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Object_Field_Value__c</columns>
    <columns>SObject_Field_Name__c</columns>
    <columns>Field_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>JSON_Type__c</field>
        <operation>equals</operation>
        <value>Request</value>
    </filters>
    <label>Tax Request</label>
</ListView>